# term4-probabilistic_modeling

./: LICENSE  README.md
2DParticleMotion/: CMakeLists.txt  config.json  main.cpp  simulation.cpp  simulation.hpp
ComplexPlane/: CMakeLists.txt  JsonDialog.qml  Main.qml  ReturnsDialog.qml  TrajectoryCanvas.qml  main.cpp  simulation.cpp  simulation.hpp  simulationAdapter.cpp  simulationAdapter.hpp
DrunkPerson_simulation/: CMakeLists.txt  ControlButtons.qml  Main.qml  ParametersPanel.qml  ProbabilityChart.qml  ResultsDialog.qml  Road.qml  StatisticsPanel.qml  Style.qml  main.cpp  simulation.cpp  simulation.hpp  simulationAdapter.cpp  simulationAdapter.hpp
DrunkPerson_simulation/qml/: CustomButton.qml  FileDialog.qml  SearchPanel.qml
Email_classifier/data/: test.csv  train.csv
Email_classifier/model/: classifier.cpp  classifier.hpp  main  main.cpp
GraphStatistics/: main.cpp  task
ParticleMovement/: CMakeLists.txt
Unemployment_Simulation2026/: CMakeLists.txt  Main.qml  main.cpp  simulation.cpp  simulation.hpp  simulationAdapter.cpp  simulationAdapter.hpp
n_tree_visualization/: CMakeLists.txt  Main.qml  main.cpp  tree_moovement.pro  tree_realization.cpp  tree_realization.hpp
src/modeling_homeworkTasks_from_12_02_26/part1/: main.cpp  model
src/modeling_homeworkTasks_from_12_02_26/part2/: main.cpp  model
src/modeling_homeworkTasks_from_12_3_26/: main1.cpp  main3.cpp  main_part1.cpp  part1  task1  task3
src/modeling_homeworkTasks_from_19_02_26/: main_part1.cpp  main_part2.cpp  model1  model2
src/modeling_homeworkTasks_from_19_03_26/: main1p.cpp  main2p.cpp  part1  part2
src/modeling_homeworkTasks_from_27_02_26/: 3_1.cpp  3_1task  3_2task  factorio_simulator.cpp
stepped_figure/: CMakeLists.txt  Main.qml  StepFigureCanvas.qml  main.cpp  stepfigure.cpp  stepfigure.hpp  stepfigureAdapter.cpp  stepfigureAdapter.hpp
xOyPointMovementModeling/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.hpp  ControlButtons.qml  JsonDialog.qml  Main.qml  PlaneView.qml  ResultDialog.qml  main.cpp  simulation.cpp  simulation.hpp  simulationAdapter.cpp  simulationAdapter.hpp
